# furzpi-templates

./: .pre-commit-config.yaml  .remove_git.sh  Makefile  README.md  pyproject.toml  remove_git.sh  requirements-dev.txt  requirements.txt  setup.sh
src/: main.py
src/tools/: msg.py
tests/: test_main.py  test_msg.py
tod/: __init__.py  __main__.py
tod/tools/: msg.py
